# fleet-api

./: ALGORITHMS_SUMMARY.md  ALGORITHM_ANALYSIS.md  ALGORITHM_SPEC_V2.md  ASSIGNMENT_FIXES_SUMMARY.md  CSV_UPLOAD_GUIDE.md  CURL_EXAMPLES.md  IMPLEMENTATION_README.md  QUICKSTART_API.md  QUICKSTART_DATABASE.md  README.md  algorithm_config.json  config.example.json  config.json  message.txt  pyproject.toml  run_full.sh  run_test.sh  test_all_endpoints.sh  test_api.py  test_assignment.py  test_csv_upload.py  test_db_connection.py  test_placement.py  upload_csv_data.py  upload_test.html
data/: locations.csv  locations_relations.csv  vehicles.csv
output/: assignments_20251030_031900.csv  assignments_20251030_032212.csv  assignments_20251030_040653.csv  placement_report_20251030_031900.json  placement_report_20251030_032212.json  placement_report_20251030_040653.json  summary_20251030_031900.json  summary_20251030_031936.json  summary_20251030_032212.json  summary_20251030_033203.json  summary_20251030_040653.json  vehicle_states_20251030_031900.csv  vehicle_states_20251030_033203.csv  vehicle_states_20251030_040653.csv  vehicles_placed_20251030_040653.csv
src/: assignment.py  constraints.py  costs.py  data_loader.py  db_adapter.py  endpoint_csv.py  endpoints.py  main.py  models.py  optimizer.py  output.py  pathfinding.py  placement.py  placement_cost_based.py  run_optimizer.py
src/algorithms/: __init__.py  assignment.py  placement.py  relation_helper.py
